# mini-compiler-riscv

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  编译系统实践报告.docx
docs/: backend-design.md  division-of-labor.md  integration-notes.md  toyc-spec.md  编译系统实践报告.docx
include/backend/: CodeGen.h  Optimizer.h
include/frontend/: AST.h  Lexer.h  Parser.h
include/midend/: CheckedAST.h  SemanticAnalyzer.h  SymbolTable.h
src/: main.cpp
src/backend/: README.md
src/backend/codegen/: CodeGen.cpp
src/backend/opt/: Optimizer.cpp
src/frontend/: AST.cpp  Lexer.cpp  Parser.cpp  README.md
src/midend/: README.md  SemanticAnalyzer.cpp  SymbolTable.cpp
tests/: README.md
tests/cases/functional/: 02_arith.tc  03_locals.tc  04_ifelse.tc  05_while_sum.tc  06_break_continue.tc  07_fib.tc  09_globals.tc  10_shortcircuit.tc  11_scope.tc  12_unary_logic.tc  13_gcd.tc  15_nested_expr.tc  16_nested_loops.tc  17_void_func.tc  18_compare_ops.tc  19_const_fold.tc  20_many_locals.tc  21_call_in_expr.tc  22_neg_divmod.tc  23_precedence.tc  24_elseif.tc  25_deep_expr.tc  26_short_circuit2.tc  27_power.tc  28_ackermann.tc  29_global_state.tc  30_unary_chain.tc  31_boundary.tc  32_empty_stmt.tc  33_void_multi_return.tc  34_nested_if_else.tc  35_deep_scope.tc  36_while_complex_cond.tc  37_multi_return_paths.tc  38_nested_break_continue.tc  39_const_logical.tc  40_mixed_void_int.tc  41_while_if_chain.tc  42_fib_iter.tc
tests/cases/perf/: prime.tc
tests/scripts/: crt0.s  perf_compare.sh  run_tests.sh
